data/derived/fa15/progs/unify/prog0490.ml.out
Characters 54-58:
  let fixpoint (f,b) = wwhile ((let f' b = (f b) = b in f' b),b);;
                                                        ^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
